Update .env.example and add php-cs-fixer config

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Teams
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:G80iMj7snTMjTWvJcJHHUt4d+Im81qEnjL1Axrqpyn0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://teams.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=teams
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
